--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -41,6 +41,14 @@
       <version>3.10.0</version>
       <scope>test</scope>
     </dependency>
+#if( $versionIsGreaterThan8 )
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>3.11.2</version>
+      <scope>test</scope>
+    </dependency>
+#end
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
